# stack-opt

./: Cargo.toml  LICENSE  README.md
src/: analyzer.rs  cli.rs  main.rs  metadata.rs  parser.rs  report.rs
