[package]
name = "stack-opt"
version = "0.1.0"
edition = "2024"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive"] }

# JSON parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP for NPM API
reqwest = { version = "0.11", features = ["json"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# File & path helpers
walkdir = "2.4"
ignore = "0.4"

# Terminal output
colored = "2.0"

# Date parsing
chrono = { version = "0.4", features = ["serde"] }